deploy/hass-screenshot/templates/hass-screenshot-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hass-screenshot
  namespace: hass-screenshot
  labels:
    app: hass-screenshot
spec:
  ports:
    - port: 5000
  selector:
    app: hass-screenshot
  type: ClusterIP
