deploy/hass-screenshot/templates/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hass-screenshot-nginx
  namespace: hass-screenshot
  labels:
    app: hass-screenshot-nginx
spec:
  ports:
    - port: 81
  selector:
    app: hass-screenshot-nginx
  type: ClusterIP
