deploy/hass-screenshot/templates/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hass-screenshot-nginx
  namespace: hass-screenshot
spec:
  rules:
  - host: hass-screenshot-nginx.nuc.one
    http:
      paths:
      - backend:
          service:
            name: hass-screenshot-nginx
            port:
              number: 81
        path: /
        pathType: ImplementationSpecific
